--- a/src/pages/[story].astro
+++ b/src/pages/[story].astro
@@ -5,10 +5,10 @@ import Layout from '../layouts/Layout.astro'
 import AppStory from '../components/AppStory.vue'
 import { getFilteredEvents } from '../utilities/getFilteredEvents.ts'
 import { columns, data, rows, ticks } from '../data/chart-config.json'
-import type { StoryEvent } from '../types/StoryEvent'
 import { StoryEventPositionOrigin } from '../types/StoryEventPositionOrigin.ts'
 import events from '../data/events.json'
 import { astroGetAdjacentStories } from '../utilities/astro-utilities'
+import UnderlinedText from '../components/UnderlinedText.astro'
 
 export async function getStaticPaths() {
   const stories = await getCollection('stories')
@@ -110,23 +110,38 @@ const conclusion = marked.parse(story.data.conclusion)
   >
     <h1
       class="
-        p-4
         bg-blue
         text-white
         overflow-hidden
-        sm:py-6
-        xl:px-16
-        xl:grid
-        xl:grid-cols-12
-        3xl:py-12
+        md:grid
+        md:grid-cols-12
+        md:items-center
+        md:gap-8
       "
       style="clip-path: url(#hero-bottom-cutout)"
     >
+      <div class="
+        hidden
+        md:flex
+        md:justify-end
+        md:items-end
+        md:col-span-4
+        md:self-end
+        md:pt-4
+      ">
+        <img
+          src="/story-illustration.png"
+          class="h-24 w-auto 2xl:h-32 3xl:h-38 4xl:h-64"
+        />
+      </div>
       <div
         class="
+          p-4
           flex
           flex-col
-          xl:col-span-9
+          items-start
+          md:col-span-8
+          3xl:py-8
         "
       >
         <span
@@ -135,25 +150,32 @@ const conclusion = marked.parse(story.data.conclusion)
             text-sm
             font-medium
             uppercase
-            xl:not-sr-only
-            3xl:text-lg
-            3xl:leading-3
+            leading-tight
+            md:not-sr-only
+            2xl:text-lg
+            3xl:text-xl
+            4xl:text-3xl
           "
         >
           {story.data.prefix}
         </span>
-        <span
-          class="
-            text-2xl
-            leading-tight
-            font-extrabold
-            uppercase
-            xl:text-3xl
-            3xl:text-4xl
-          "
-        >
-          {story.data.title}
-        </span>
+        <UnderlinedText hoverEffect={false} lineClass="-translate-y-full text-yellow h-0.5 md:h-1 2xl:h-1.5">
+          <span
+            class="
+              text-2xl
+              leading-tight
+              font-extrabold
+              uppercase
+              md:text-3xl
+              xl:text-4xl
+              2xl:text-5xl
+              3xl:text-6xl
+              4xl:text-8xl
+            "
+          >
+            {story.data.title}
+          </span>
+        </UnderlinedText>
       </div>
     </h1>
     <AppStory
@@ -169,7 +191,7 @@ const conclusion = marked.parse(story.data.conclusion)
       actions={story.data.actions}
       nextStoryUrl={`/${nextStory?.id ?? ''}`}
       nextStoryTitle={nextStory?.data?.title_short ?? homeTitle}
-      lastStoryUrl={`/${lastStory?.id ?? ''}`}
+      lastStoryUrl={`/${lastStory?.id ?? '#stories'}`}
       lastStoryTitle={lastStory?.data?.title_short ?? homeTitle}
     />
 	</div>
