Adjust underline size in very large screens

--- a/src/pages/[story].astro
+++ b/src/pages/[story].astro
@@ -159,7 +159,7 @@ const conclusion = marked.parse(story.data.conclusion)
         >
           {story.data.prefix}
         </span>
-        <UnderlinedText hoverEffect={false} lineClass="-translate-y-full text-yellow h-0.5 md:h-1 2xl:h-1.5">
+        <UnderlinedText hoverEffect={false} lineClass="-translate-y-full text-yellow h-0.5 md:h-1 2xl:h-1.5 4xl:h-3">
           <span
             class="
               text-2xl
