--- a/src/pages/data.astro
+++ b/src/pages/data.astro
@@ -9,7 +9,7 @@ const lastDate = events[events.length - 1].date
 ---
 
 <Layout
-	title="All Data | Growth of a Movement: The BDS campaign for Palestinian justice"
+	title="Dataset & Timeline | Growth of the BDS Movement for Palestine"
 	description="Search, filter and analyze all events in our dataset on the growth of the Boycott, Divestment, and Sanctions (BDS) movement for Palestinian justice."
 	currentUrl="/data"
 	bgColor="black"
