Add size animation to story buttons on homepage

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -119,6 +119,7 @@ const stories = await astroGetSortedStories()
 								bg-blue
 								hover:bg-red
 								hover:-translate-y-1
+								hover:scale-105
 								${i % 2 ? 'hover:-rotate-1' : 'hover:rotate-1'}
 								md:gap-6
 								xl:aspect-[4/1]
@@ -174,6 +175,7 @@ const stories = await astroGetSortedStories()
 							text-black
 							hover:bg-white
 							hover:-translate-y-1
+							hover:scale-105
 							${stories.length % 2 ? 'hover:-rotate-1' : 'hover:rotate-1'}
 							md:gap-6
 							xl:aspect-[4/1]
