--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ const stories = await astroGetSortedStories()
 ---
 
 <Layout
-	title="Growth of the BDS Movement for Palestine"
+	title="Growth of a Movement: The BDS campaign for Palestinian justice"
 	description="Explore the actions that have shaped the Palestinian-led Boycott, Divestment, and Sanctions (BDS) movement for freedom, justice, and equality."
 	currentUrl="/"
 	bgColor="black"
