Add opengraph images and tags

--- a/src/pages/[story].astro
+++ b/src/pages/[story].astro
@@ -99,6 +99,7 @@ const conclusion = marked.parse(story.data.conclusion)
 	description={story.data.description}
 	currentUrl="/"
 	bgColor="black"
+	opengraphImage={story.data?.opengraphImage ?? undefined}
 >
 	<div class="
       story-root
