--- a/src/pages/data.astro
+++ b/src/pages/data.astro
@@ -13,6 +13,7 @@ const lastDate = events[events.length - 1].date
 	description="Search, filter and analyze all events in our dataset on the growth of the Boycott, Divestment, and Sanctions (BDS) movement for Palestinian justice."
 	currentUrl="/data"
 	bgColor="black"
+	opengraphImage='opengraph-data.png'
 >
 	<h1 class="sr-only">Full Dataset</h1>
 	<AppData
