--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,9 +9,17 @@ interface Props {
 	currentUrl: string,
 	bgColor: string;
 	showHeader?: boolean;
+	opengraphImage?: string;
 }
 
-const { title, description, currentUrl, bgColor, showHeader = true } = Astro.props;
+const {
+	title,
+	description,
+	currentUrl,
+	bgColor,
+	showHeader = true,
+	opengraphImage = 'opengraph.png'
+} = Astro.props;
 
 const nav = [
 	{
@@ -40,8 +48,15 @@ const nav = [
 		<meta name="og:title" content={title} />
 		<meta name="description" content={description} />
 		<meta name="og:description" content={description} />
-    <meta property="twitter:description" content={description}>
-    <meta property="og:type" content="website">
+		<meta property="twitter:description" content={description}>
+		<meta property="og:type" content="website">
+		<meta property="og:image" content={`https://bds.visualizingpalestine.org/${opengraphImage}`}>
+		<meta property="og:image:width" content="1200">
+		<meta property="og:image:height" content="630">
+		<meta property="og:image:alt" content={title}>
+		<meta property="twitter:image" content={`https://bds.visualizingpalestine.org/${opengraphImage}`}>
+		<meta property="twitter:card" content="summary_large_image">
+		<meta property="twitter:domain" content="bds.visualizingpalestine.org">
 		<meta name="generator" content={Astro.generator} />
 		<link rel="preconnect" href="https://use.typekit.net">
 		<link href="https://use.typekit.net/sre8kmx.css" rel="stylesheet">
