Fix malformed HTML

--- a/src/components/SketchBox.astro
+++ b/src/components/SketchBox.astro
@@ -9,7 +9,7 @@ const { class: className, backgroundPathId = 'panel-bg-1' } = Astro.props;
 
 <div
   class={`overflow-hidden ${className}`}
-  style={`clip-path: url(#${backgroundPathId}`}
+  style={`clip-path: url(#${backgroundPathId})`}
 >
   <slot />
 </div>
