Update text based on Jess's review

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -88,12 +88,12 @@ import SvgVPLogo from '../images/vp-logo.svg'
       ">
         <li>
           <p class="prose prose-lg leading-snug 3xl:prose 3xl:prose-xl 3xl:leading-snug">
-            <strong class="inline-block px-2 bg-yellow">Potential geographic skew:</strong> The researchers working on this dataset are primarily English-speaking. Therefore, events covered in languages other than English may be underrepresented in our data. This is an important reason why we use BNC roundup lists as a starting point for determining which events to include on the timeline, as the BNC pays close attention to developments in non-English media.
+            <strong class="inline-block px-2 bg-yellow">Potential geographic skew:</strong> The researchers working on this dataset are primarily English-speaking. Therefore, events covered in languages other than English may be underrepresented in our data. We refer to BDS movement reports to limit this effect, since these include updates from activists and campaign coordinators around the world.
           </p>
         </li>
         <li>
           <p class="prose prose-lg leading-snug 3xl:prose 3xl:prose-xl 3xl:leading-snug">
-            <strong class="inline-block px-2 bg-yellow">Proving causality:</strong> It is not always possible to prove that the BDS movement was the impetus for a particular event or action. Because of ongoing attempts to criminalize, repress, and stigmatize BDS in some countries, there is an incentive for actors to downplay or deny the role of BDS organizing on their actions. The BDS movement does not claim “credit” for events on this timeline, but it acknowledges that these events are consistent with its tactics and campaign goals, and that active BDS campaigns often exist in parallel.
+            <strong class="inline-block px-2 bg-yellow">Proving causality:</strong> It is not always possible to prove that the BDS movement was the impetus for a particular event or action. Because of ongoing attempts to criminalize, repress, and stigmatize BDS in some countries, there is an incentive for actors to downplay or deny the role of BDS organizing on their actions. The BDS movement does not claim “credit” for events on this timeline, but acknowledges any action that is consistent with the goals of active BDS campaigns.
           </p>
         </li>
       </ul>
