--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -103,18 +103,20 @@ const stories = await astroGetSortedStories()
 				flex-col
 				gap-6
 				text-center
+				text-lg
 				xl:col-span-2
 				xl:text-left
 				xl:gap-4
+				md:text-xl
 			">
 				<h2 class="text-2xl font-black xl:text-4xl">
 					A Global Movement
 				</h2>
-				<p class="text-lg md:text-xl">
-					The Palestinian call to boycott, divest from, and sanction Israel has inspired a global movement of activists, workers, students, and community groups. They run <a href="https://bdsmovement.net/Guide-to-BDS-Boycott" class="underline" target="_blank">targeted campaigns</a> that seek to pressure Israel to comply with international law.
+				<p>
+					The Palestinian call for boycott, divestment, and sanctions against Israel has inspired a global movement of activists, workers, students, and community groups. They run <a href="https://bdsmovement.net/Guide-to-BDS-Boycott" class="underline" target="_blank">targeted campaigns</a> that challenge international support for Israeli oppression and pressure Israel to comply with international law.
 				</p>
-				<p class="text-xl md:text-xl">
-					These are their stories.
+				<p>
+					These stories illustrate the growth and impact of the BDS movement.
 				</p>
 			</div>
 			<div
