--- a/src/pages/[story].astro
+++ b/src/pages/[story].astro
@@ -131,7 +131,7 @@ const conclusion = marked.parse(story.data.conclusion)
         md:pt-4
       ">
         <img
-          src="/story-illustration.png"
+          src={story.data.illustration}
           class="h-24 w-auto 2xl:h-32 3xl:h-38 4xl:h-64"
         />
       </div>
