--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,9 +14,9 @@ import SvgVPLogo from '../images/vp-logo.svg'
     class="bg-yellow overflow-hidden"
     style="clip-path: url(#hero-bottom-cutout);"
   >
-    <div class="max-w-4xl mx-auto pt-8 3xl:max-w-6xl">
+    <div class="max-w-4xl mx-auto pt-8 px-8 3xl:max-w-6xl">
       <img
-        src="/about-illustration.png"
+        src="/illustrations/movement.png"
         class="w-full h-auto"
       />
     </div>
