--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -78,7 +78,7 @@ const stories = await astroGetSortedStories()
 				landscape:items-end
 			">
 				<HomeQuickLinks class="landscape:hidden h-1/2" />
-				<img src="/story-illustration.png" class="w-2/3 lg:w-auto lg:h-3/4" />
+				<img src="/illustrations/movement.png" class="w-2/3 lg:w-auto lg:h-3/4" />
 			</div>
 		</div>
 		<section
@@ -157,7 +157,7 @@ const stories = await astroGetSortedStories()
 									self-end
 									-ms-4
 									xl:w-1/3
-									xl:ms-4
+									xl:ms-0
 								`}
 							/>
 							<div class="relative top-1 flex flex-col items-start">
