--- a/src/pages/[story].astro
+++ b/src/pages/[story].astro
@@ -114,34 +114,22 @@ const conclusion = marked.parse(story.data.conclusion)
         bg-blue
         text-white
         overflow-hidden
-        md:grid
-        md:grid-cols-12
+        md:flex
         md:items-center
         md:gap-8
       "
       style="clip-path: url(#hero-bottom-cutout)"
     >
-      <div class="
-        hidden
-        md:flex
-        md:justify-end
-        md:items-end
-        md:col-span-4
-        md:self-end
-        md:pt-4
-      ">
-        <img
-          src={story.data.illustration}
-          class="h-24 w-auto 2xl:h-32 3xl:h-38 4xl:h-64"
-        />
-      </div>
+      <img
+        src={story.data.illustration}
+        class="hidden mt-4 h-24 w-auto md:block 2xl:h-32 3xl:h-38 4xl:h-64"
+      />
       <div
         class="
           p-4
           flex
           flex-col
           items-start
-          md:col-span-8
           3xl:py-8
         "
       >
